[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redline-checker"
version = "0.1.0"
description = "Redline Checker — civil engineering redline detection. Phase 1 internal MVP."
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools]
packages = ["redline_checker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
